--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>블로그 글</title>
@@ -31,6 +31,5 @@
         </div>
     </div>
 </div>
-
 <script src="/js/article.js"></script>
 </body>
