--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>블로그 글 목록</title>
@@ -10,9 +11,11 @@
 <div th:replace="~{fragments/header :: common_header}"></div>
 
 <div class="container">
-    <button type="button" id="create-btn"
+    <button type="button" id="create-btn" sec:authorize="isAuthenticated()"
             th:onclick="|location.href='@{/new-article}'|"
-            class="btn btn-secondary btn-sm mb-3">글 등록</button>
+            class="btn btn-secondary btn-sm mb-3">
+        글 등록
+    </button>
     <div class="row-6" th:each="item : ${articles}">
         <div class="card">
             <div class="card-header" th:text="${item.id}">
