--- a/src/main/resources/templates/oauthLogin.html
+++ b/src/main/resources/templates/oauthLogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -63,8 +64,9 @@
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
                     <div>
-                        <button type="submit" class="btn btn-primary btn-block" id="login-btn">Login</button>
-                        <a href="/signup" class="btn btn-secondary btn-block">Sign Up</a>
+                        <button type="submit" class="btn btn-primary btn-block" id="login-btn">로그인</button>
+                        <a th:href="@{/signup}" class="btn btn-secondary btn-block">회원가입</a>
+                        <a th:href="@{/guest}" class="btn btn-secondary btn-block">비회원으로 구경하기</a>
                     </div>
                 </form>
 
