--- a/src/main/resources/templates/newArticle.html
+++ b/src/main/resources/templates/newArticle.html
@@ -12,21 +12,27 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-8">
-            <article>
-                <input type="hidden" id="article-id" th:value="${article.id}">
+            <form id="article-form" th:action="@{api/articles}" th:method="POST" th:object="${article}">
+                <input type="hidden" id="article-id" th:field="*{id}"/>
 
                 <header class="mb-4">
-                    <input type="text" class="form-control" placeholder="제목" id="title" th:value="${article.title}">
+                    <label for="title" class="form-label"><b>제목</b></label>
+                    <input type="text" class="form-control" placeholder="제목" id="title" required
+                           name="title" th:field="*{title}"/>
                 </header>
+
                 <section class="mb-5">
-                    <textarea class="form-control h-25" rows="10" placeholder="내용" id="content" th:text="${article.content}"></textarea>
+                    <label for="content" class="form-label"><b>내용</b></label>
+                    <textarea class="form-control h-25" rows="10" placeholder="내용" id="content" required
+                              name="content" th:field="*{content}"></textarea>
                 </section>
-                <button th:if="${article.id} != null" type="button" id="modify-btn" class="btn btn-primary btn-sm">수정</button>
-                <button th:if="${article.id} == null" type="button" id="create-btn" class="btn btn-primary btn-sm">등록</button>
-            </article>
+
+                <button th:if="${article.id == null}" type="button" id="create-btn" class="btn btn-primary btn-sm">등록</button>
+                <button th:if="${article.id != null}" type="button" id="modify-btn" class="btn btn-primary btn-sm">수정</button>
+            </form>
         </div>
     </div>
 </div>
-
-<script src="/js/article.js"></script>
+<script src="/js/article.js">
+</script>
 </body>
