--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>블로그 글</title>
@@ -12,20 +13,20 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-lg-8">
-            <article>
-                <input type="hidden" id="article-id" th:value="${article.id}">
+            <article th:object="${article}">
+                <input type="hidden" id="article-id" th:field="*{id}">
                 <header class="mb-4">
-                    <h1 class="fw-bolder mb-1" th:text="${article.title}"></h1>
+                    <h1 class="fw-bolder mb-1" th:text="*{title}"></h1>
                     <div class="text-muted fst-italic mb-2"
-                         th:text="|Posted on ${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')} By ${article.author}|"></div>
+                         th:text="|Posted on ${#temporals.format(article.createdAt, 'yyyy-MM-dd HH:mm')} By *{author}|"></div>
                 </header>
                 <section class="mb-5">
-                    <p class="fs-5 mb-4" th:text="${article.content}"></p>
+                    <p class="fs-5 mb-4" th:text="*{content}"></p>
                 </section>
-                <button type="button" id="modify-btn"
+                <button type="button" id="modify-btn" th:if="${#authentication.getName() == article.author}"
                         th:onclick="|location.href='@{/new-article?id={articleId}(articleId=${article.id})}'|"
                         class="btn btn-primary btn-sm">수정</button>
-                <button type="button" id="delete-btn"
+                <button type="button" id="delete-btn" th:if="${#authentication.getName() == article.author}"
                         class="btn btn-secondary btn-sm">삭제</button>
             </article>
         </div>
