--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <title>블로그 글 목록</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <style>
+        .card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .card-title {
+            margin: 0;
+        }
+
+        .card-index {
+            font-size: 0.9rem;
+            color: #6c757d;
+        }
+    </style>
 </head>
 <body>
 
@@ -16,14 +33,15 @@
             class="btn btn-secondary btn-sm mb-3">
         글 등록
     </button>
-    <div class="row-6" th:each="item : ${articles}">
+    <div class="row-6" th:each="article, iter : ${articles}">
         <div class="card">
-            <div class="card-header" th:text="${item.id}">
+            <div class="card-header">
+                <h4 class="card-title" th:text="${article.title}"></h4>
+                <span class="card-index" th:text="${iter.index + 1}"></span>
             </div>
             <div class="card-body">
-                <h5 class="card-title" th:text="${item.title}"></h5>
-                <p class="card-text" th:text="${item.content}"></p>
-                <a th:href="@{/articles/{id}(id=${item.id})}" class="btn btn-primary">보러가기</a>
+                <p class="card-text" th:text="${article.content}"></p>
+                <a th:href="@{/articles/{id}(id=${article.id})}" class="btn btn-primary">보러가기</a>
             </div>
         </div>
         <br>
@@ -32,3 +50,4 @@
 
 <script src="/js/article.js"></script>
 </body>
+</html>
